--- a/InstantCake/package.json
+++ b/InstantCake/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@tanstack/react-query": "^5.90.1",
     "axios": "^1.12.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
