--- a/InstantCake/package.json
+++ b/InstantCake/package.json
@@ -18,11 +18,13 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.29.0",
+    "recharts": "^3.2.1",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.23.0",
